--- a/app1/Chart.yaml
+++ b/app1/Chart.yaml
@@ -1,1 +1,9 @@
-
+apiVersion: v2
+name: app-subchart
+type: application
+version: 0.1.0
+appVersion: "0.1.0"
+dependencies:
+- name: app
+  version: 0.1.0
+  repository: https://argo-helm-charts-playground.s3.eu-central-1.amazonaws.com/charts
