--- a/app1/Chart.yaml
+++ b/app1/Chart.yaml
@@ -1,9 +1,10 @@
+---
 apiVersion: v2
-name: app-subchart
+name: quarkus-subchart
 type: application
-version: 0.1.0
-appVersion: "0.1.0"
+version: 1.0.0
+appVersion: "1.0.0"
 dependencies:
-- name: app
-  version: 0.1.0
-  repository: https://argo-helm-charts-playground.s3.eu-central-1.amazonaws.com/charts
+- name: quarkus
+  version: 0.0.3
+  repository: https://redhat-developer.github.com/redhat-helm-charts
