--- a/app1/Chart.yaml
+++ b/app1/Chart.yaml
@@ -7,4 +7,4 @@ appVersion: "1.0.0"
 dependencies:
 - name: quarkus
   version: 0.0.3
-  repository: https://redhat-developer.github.com/redhat-helm-charts
+  repository: https://argo-helm-charts-playground.s3.eu-central-1.amazonaws.com/charts
